# static-server

./: .rustfmt.toml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
src/: main.rs
templates/: 400.html  base.html  error.html  index.html
