[package]
name = "static-server"
version = "0.5.3"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# took from https://github.com/rust-analyzer/rust-analyzer/blob/48f84a7b60bcbd7ec5fa6434d92d9e7a8eb9731b/Cargo.toml
[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
incremental = true
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.

[dependencies]
# axum = { path = "../axum" }
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "main"}
axum-macros = { git = "https://github.com/tokio-rs/axum.git", branch = "main"}
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
askama = "0.12.1"
hyper = { version = "1.4.1", features = ["server", "http1", "http2"] }
mime_guess = "2.0.5"
mime = "0.3.17"
base64 = "0.22.1"
percent-encoding = "2.3.1"
time = { version = "0.3.36", features = ["formatting"] }
clap = { version = "4.5.16", features = ["derive"] }

[patch.crates-io]
#tokio = { git = "https://github.com/tokio-rs/tokio.git", branch = "master" }
#tokio-util = { git = "https://github.com/tokio-rs/tokio.git", branch = "master" }
#tower-http = { git = "https://github.com/tower-rs/tower-http.git", branch = "master" }
#tower-http = { path = "../tower-http/tower-http" }


